# app

./: CMakeLists.txt  README.md  app.vix  vix.json
examples/: 01_hello_app.cpp  02_routes_basic.cpp  03_json_response.cpp  04_middleware_basic.cpp  05_runtime_app.cpp  06_rest_api_complete.cpp  CMakeLists.txt
examples/modular_users_api/: CMakeLists.txt  User.hpp  UserController.hpp  UserRepository.hpp  UserService.hpp  main.cpp
include/cnerium/app/: App.hpp  AppConfig.hpp  AppContext.hpp  AppHandler.hpp  app.hpp  version.hpp
include/cnerium/app/detail/: AppBuilder.hpp  ContextAdapter.hpp  HandlerAdapter.hpp  Logger.hpp  RouteHelpers.hpp  Style.hpp  Ui.hpp
tests/: test_app_config.cpp  test_app_context.cpp  test_app_routes.cpp  test_app_runtime.cpp  test_app_server_integration.cpp  test_basic.cpp
